--- a/eureka-client-2/src/main/resources/application.yml
+++ b/eureka-client-2/src/main/resources/application.yml
@@ -7,7 +7,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://admin:123456@127.0.0.1:8766/eureka/,http://admin:123456@127.0.0.1:8762/eureka/
+      defaultZone: http://admin:123456@127.0.0.1:8762/eureka/
   instance:
 
     instance-id: ${spring.application.name}:${server.port}
