--- a/eureka-client-consumer-7001/src/main/resources/application.yml
+++ b/eureka-client-consumer-7001/src/main/resources/application.yml
@@ -15,3 +15,8 @@ eureka:
     instance-id: ${spring.application.name}:${server.port}
 
     prefer-ip-address: true
+
+
+logging:
+  level:
+    com.cloud.eurekaclientconsumer7001.feign: debug
