--- a/eureka-client-consumer-7001/pom.xml
+++ b/eureka-client-consumer-7001/pom.xml
@@ -33,7 +33,12 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
 
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+            <version>1.4.2.RELEASE</version>
 
+        </dependency>
 
     </dependencies>
 
