--- a/eureka-client-consumer-7001/src/main/resources/application.yml
+++ b/eureka-client-consumer-7001/src/main/resources/application.yml
@@ -16,7 +16,27 @@ eureka:
 
     prefer-ip-address: true
 
+# ribbon 超时全局配置
+#ribbon:
+#  ReadTimeout: 3000
+#  ConnectTimeout: 3000
 
 logging:
   level:
     com.cloud.eurekaclientconsumer7001.feign: debug
+
+hystrix:
+  command:
+   default:
+    execution:
+     isolation:
+       #  隔离策略
+       strategy: THREAD
+
+
+
+
+
+
+
+
