--- a/eureka-client-consumer-7001/src/main/resources/application.yml
+++ b/eureka-client-consumer-7001/src/main/resources/application.yml
@@ -18,23 +18,51 @@ eureka:
 
 # ribbon 超时全局配置
 ribbon:
-  ReadTimeout: 3000
-  ConnectTimeout: 3000
+  ###指的是建立连接所用的时间，适用于网络状况正常的情况下，两端连接所用的时间。
+  ReadTimeout: 7000
+  ###指的是建立连接后从服务器读取到可用资源所用的时间
+  ConnectTimeout: 7000
 # feign 开启支持hystrix
 feign:
   hystrix:
     enabled: true
+  client:
+    config:
+      # feign客户端调用超时配置
+      default:
+        readTimeout: 4000
+        connectTimeout: 4000
+      # 指定客户端服务实例
+      CLIENT02:
+        readTimeout: 11000
+        connectTimeout: 11000
 logging:
   level:
     com.cloud.eurekaclientconsumer7001.feign: debug
 hystrix:
   command:
-   default:
-    execution:
-     isolation:
-       #  隔离策略
-       strategy: THREAD
+    CONSUMER1#get(Integer):
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 1000
+    default:
+     execution:
+       isolation:
+         #  隔离策略
+         strategy: THREAD
+
+         # 全局超时配置
+         thread:
+           timeoutInMilliseconds: 8000
+  #  接口级别
+  # hystrix.command.UserRemoteClient#getUser(Long).execution.isolation.thread.timeoutInMilliseconds = 300
+
+
 management:
   endpoint:
     health:
       show-details: always
+
+
+
