--- a/config-8081/pom.xml
+++ b/config-8081/pom.xml
@@ -8,27 +8,23 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.cloud</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>config-8081</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>eureka-client-2</name>
-    <description>client-2</description>
+    <name>config-8081</name>
+    <description>Demo project for Spring Boot</description>
 
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
+
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-
     </dependencies>
-
 
     <build>
         <plugins>
