--- a/eureka-client-2/src/main/resources/bootstrap.yml
+++ b/eureka-client-2/src/main/resources/bootstrap.yml
@@ -24,3 +24,10 @@ eureka:
 #  instance:
 #    instance-id: ${spring.application.name}:${server.port}
 #    prefer-ip-address: true
+
+# 暴露端口用于刷新配置
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
