--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
         <module>eureka-server</module>
         <module>eureka-server-02</module>
         <module>eureka-client-consumer-7001</module>
-        <!--<module>turbine</module>
-        <module>dashboard-6001</module>-->
+        <module>turbine</module>
+        <module>dashboard-6001</module>
         <module>config-8081</module>
     </modules>
 
