--- a/eureka-client-2/src/main/resources/bootstrap.yml
+++ b/eureka-client-2/src/main/resources/bootstrap.yml
@@ -1,12 +1,13 @@
 
 spring:
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    password: admin
+    username: admin
+
   application:
     name: client02
-  rabbitmq:
-    password: password
-    username: user
-    host: localhost
-    port: 5672
   cloud:
     config:
       profile: prod
