--- a/config-8081/src/main/resources/application.yml
+++ b/config-8081/src/main/resources/application.yml
@@ -22,8 +22,8 @@ spring:
           search-locations: file:F:\config
         #\u8FDC\u7A0B\u914D\u7F6E
   rabbitmq:
-    username: admin
-    password: admin
+    username: user
+    password: password
     port: 5672
     host: localhost
 #        git:
