--- a/eureka-client-consumer-7001/src/main/resources/application.yml
+++ b/eureka-client-consumer-7001/src/main/resources/application.yml
@@ -5,6 +5,11 @@ server:
 spring:
   application:
     name: consumer1
+  rabbitmq:
+    password: password
+    username: user
+    host: localhost
+    port: 5672
 
 eureka:
   client:
