--- a/cloud-stream-8001/pom.xml
+++ b/cloud-stream-8001/pom.xml
@@ -7,21 +7,30 @@
         <artifactId>demo-cloud</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>eureka-client</artifactId>
+    <groupId>com.cloud</groupId>
+    <artifactId>cloud-stream-8001</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>eureka-client</name>
+    <name>cloud-stream-8001</name>
     <description>Demo project for Spring Boot</description>
 
+
+
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
+            <artifactId>spring-cloud-stream</artifactId>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-test-support</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
