--- a/eureka-client-consumer-7001/src/main/resources/application.yml
+++ b/eureka-client-consumer-7001/src/main/resources/application.yml
@@ -47,6 +47,10 @@ feign:
 logging:
   level:
     com.cloud.eurekaclientconsumer7001.feign: debug
+    org:
+      springframework:
+        cloud:
+          sleuth: debug
 hystrix:
   command:
     #局部关闭熔断
@@ -76,6 +80,5 @@ management:
   endpoint:
     health:
       show-details: always
-
 
 
