--- a/eureka-client-consumer-7001/pom.xml
+++ b/eureka-client-consumer-7001/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
