--- a/prod-client-03/src/main/resources/application.yml
+++ b/prod-client-03/src/main/resources/application.yml
@@ -7,6 +7,15 @@ server:
 spring:
   application:
     name: prod-client-03
+  sleuth:
+    sampler:
+      probability: 1
+    web:
+      client:
+        enabled: true
+  zipkin:
+    base-url: http://localhost:9411/
+
 
 
 eureka:
