--- a/prod-client-9002/src/main/resources/application.yml
+++ b/prod-client-9002/src/main/resources/application.yml
@@ -4,8 +4,16 @@ server:
 
 
 spring:
+  sleuth:
+    sampler:
+      probability: 1
+    web:
+      client:
+        enabled: true
   application:
     name: prod-client-02
+  zipkin:
+    base-url: http://localhost:9411/
 
 
 eureka:
