--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>prod-client-9002</module>
         <module>prod-client-9001</module>
         <module>prod-client-03</module>
+        <module>zuul-5001</module>
     </modules>
 
 
