--- a/prod-client-9001/src/main/resources/application.yml
+++ b/prod-client-9001/src/main/resources/application.yml
@@ -5,14 +5,14 @@ server:
 
 
 spring:
-  sleuth:
-    sampler:
-      probability: 1
-    web:
-      client:
-        enabled: true
-  zipkin:
-    base-url: http://localhost:9411/
+#  sleuth:
+#    sampler:
+#      probability: 1
+#    web:
+#      client:
+#        enabled: true
+#  zipkin:
+#    base-url: http://localhost:9411/
   application:
     name: prod-client-01
 
