--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.5.RELEASE</version>
+        <version>2.2.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.cloud</groupId>
     <artifactId>demo-cloud</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo-cloud</name>
+    <name>spring-cloud</name>
     <packaging>pom</packaging>
 
     <modules>
@@ -26,14 +26,16 @@
         <module>config-8081</module>
         <module>prod-client-9001</module>
         <module>prod-client-03</module>
-        <module>zuul-5001</module>
-<!--        <module>gateway-3003</module>-->
+        <!--<module>zuul-5001</module>-->
+        <module>nacos</module>
+        <module>nacos-client-82</module>
+        <module>nacos-client-81</module>
+        <module>gateway-3003</module>
     </modules>
 
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Finchley.SR4</spring-cloud.version>
     </properties>
     <repositories>
         <repository>
@@ -60,6 +62,12 @@
         </pluginRepository>
     </pluginRepositories>
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -97,11 +105,22 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
+                <version>Hoxton.SR3</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>2.2.1.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
         </dependencies>
+
+
     </dependencyManagement>
     <build>
         <plugins>
